# nokia_test_assignment

./: CMakeLists.txt  LICENSE  README.md  csv_table.cpp  csv_table.h  expression.cpp  expression.h  funcs.cpp  funcs.h  main.cpp  parse_func.cpp  parse_func.h
test_files/: valid.csv  valid2.csv  wrong_arg.csv  wrong_data.csv  wrong_fist_line.csv  wrong_num.csv  wrong_table_row_size.csv
